Some fixes and testing
Added display:inline-block to properly testing width.
Trying to add dummy element to preserve original transition on original
event.
Added height to transition properties.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <button id="btnTrigerResize">Trigger resize event</button>
     <button id="btnResizeContainer">Resize container</button>
     <div class="container" >
-        <div class="editor" id="editor" style="width:300px; height:500px;position:relative">Some text</div>
+        <div class="editor" id="editor" >Some text</div>
+       
     </div>
 
 
